--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 background-color: rgb(255, 255, 255);
 }
 .parte1{
-    background: aqua;
+    background: gray;
 }
 h1{
 text-align: center; color: rgb(0, 0, 0)
@@ -21,5 +21,5 @@ strong{
 color: rgb(0, 0, 0);
 }
 .parte2{
-    background: darkblue
+    background: gray
 }
