--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 html {
-height: 100%;
-width: 100%;
-}
-#banner
-{ width: 100%;
-height: 650px;}
-body{
-background-color: gray
-}
-.parte1{
+    height: 100%;
+    width: 100%;
+    }
+    #banner
+    { width: 100%;
+    height: 650px;}
+    body{
+    background-color: white;
+    }
+    .principal {
     background: gray;
-}
-h1{
-text-align: center; color: rgb(0, 0, 0)
-}
-p {
-text-align: center;
-}
-strong{
-color: red
-}
-.parte2{
-    background: gray
-}
+    }
+    h1{
+    text-align: center; color: red
+    }
+    p {
+    text-align: center;
+    }
+    strong{
+    color: indianred;
+    }
+    .beneficios{
+    background: lightpink;
+    }
